# TRS_timing

./: .gitignore  README.md  bench_time.sh  out.txt  run_benches.sh
ASC/: Cargo.toml
ASC/src/: lib.rs
CLSAG/: README.md  out.txt
CLSAG/src/: signature.rs
CLSAG/tests/: protocol.rs
DualDory/: README.md  out.txt
DualDory/bench/: main.go
LRS/: README.md  example.go  go.mod  go.sum  out.txt
Raptor/: README.md  bench.sh  makefile  param.h.orig.IuLjwB  param.h.orig.jXeLL1  raptor_test  test.c
Raptor/Debug/: poly.d  print.d  raptor  raptor.d  test.d
Raptor/Debug/falcon/: crypto_stream.d  falcon-enc.d  falcon-fft.d  falcon-keygen.d  falcon-sign.d  falcon-vrfy.d  frng.d  nist.d  shake.d
Raptor/Debug/rng/: crypto_hash_sha512.d  fastrandombytes.d  rng.d  shred.d
TRS/: Cargo.toml  README.md  proof_sizes.csv
TRS/benches/: bench.rs
TRS/src/: lib.rs  main.rs
TRS/tests/: test.rs
U2SSO/: README.md
U2SSO/crypto-dbpoe/: Makefile  Makefile.in  aclocal.m4  bench_ecmult  bench_generator  bench_internal  bench_sign  bench_verify  config.status  configure  exhaustive_tests  gen_context  libsecp256k1.la  libsecp256k1.pc  libtool  tests
U2SSO/crypto-dbpoe/.libs/: bench_sign  bench_verify  libsecp256k1.0.dylib  libsecp256k1.lai
U2SSO/crypto-dbpoe/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
U2SSO/crypto-snark/: package-lock.json  package.json
U2SSO/proof-of-concept/: clientapp.go  server.go  workflow.go
cryptolib/: Cargo.toml
cryptolib/benches/: bench.rs
cryptolib/src/: lib.rs  main.rs
cryptolib/tests/: test.rs
(+13 files in other folders)
