[package]
name = "ASC"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = { version = "0.9", default-features = false }
curve25519-dalek = { version = "3.0", default-features = false, features = ["u64_backend"] }
digest = { version = "0.9", default-features = false }
generic-array = "0.9"
rand = "0.7"
rand_core  = { version = "0.5", default-features = false }
arrayref = "0.3.7"
plotters = "0.3.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
